fixed footer
fixed minor layout issues
fixed bg color in projects

--- a/lumora/src/styles/Footer.module.css
+++ b/lumora/src/styles/Footer.module.css
@@ -1,7 +1,74 @@
+@font-face {
+    font-family: 'Moora';
+    src: url(../assets/data/fonts/MOORA\ LIGHT\ REGULER.otf);
+}
+
 .main{
     width: 100vw;
     height: 25vh;
-    max-height: 300px;
+    max-height: 400px;
+    padding: 20px;
     background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
 }
 
+.main h1{
+    font-family: 'Moora';
+    margin: 0;
+    border-bottom: 1px black solid;
+    width: fit-content;
+}
+
+.main p{
+    margin: 0;
+    font-size: 0.6rem;
+}
+
+.main .contactcont{
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+}
+
+.main .contactcont h3{
+    margin: 0;
+    border-bottom: 1px black solid;
+    margin-bottom: 5px;
+    width: fit-content;
+}
+
+.main .contactcont .contact{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.main .contact div{
+    width: 40px;
+    height: fit-content;
+    padding: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 5px;
+    transition: 0.2s ease-in;
+}
+
+.main .contact div:hover{
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+.main .contact div img{
+    width: 90%;
+}
+
+.main .contact div p{
+    margin: 0;
+    font-size: 0.5rem;
+}
