--- a/lumora/src/styles/Landing.module.css
+++ b/lumora/src/styles/Landing.module.css
@@ -21,7 +21,7 @@
     h1{
         margin: 0;
         color: white;
-        filter: drop-shadow(0 0 5px black);
+        filter: drop-shadow(0 0 10px black);
     }
 }
 
@@ -34,7 +34,13 @@
     height: 400px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     padding: 20px;
+    gap: 20px;
+}
+
+.news_article h1{
+    margin: 0;
 }
 
 .news_container{
