--- a/lumora/src/styles/Map.module.css
+++ b/lumora/src/styles/Map.module.css
@@ -15,5 +15,9 @@
 .details{
     width: 50%;
     height: 100%;
-    background-color: yellow;
+    background-color: white;
+}
+
+#levelh3{
+    color: white
 }
